<resources>
    <string name="app_name">SocialMediaApp</string>
    <string name="new_account">New Account</string>
    <string name="login_account">Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="photo">Photo</string>
    <string name="click_on_image_to_change">(Click to Change)</string>
    <string name="birthdate">Birthdate (MM/DD/YYYY)</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="create_profile">Create Profile</string>
    <string name="bio_here">Bio Here</string>
    <string name="hometown">Hometown</string>
    <string name="title_activity_social">SocialActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    -
</resources>
